load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/zenreach/service-manifests
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/zenreach/service-manifests",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_fatih_color//:go_default_library",
        "@com_github_zenreach_go_jsonnet//:go_default_library",
    ],
)

go_binary(
    name = "service-manifests",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
)
