load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["static_analyzer.go"],
    importpath = "github.com/zenreach/service-manifests/HACK",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_zenreach_go_jsonnet//ast:go_default_library",
        "@com_github_zenreach_go_jsonnet//parser:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["static_analyzer_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_zenreach_go_jsonnet//ast:go_default_library"],
)
