load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "find_variables.go",
        "linter.go",
    ],
    importpath = "github.com/zenreach/service-manifests/HACK/linter",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_zenreach_go_jsonnet//ast:go_default_library",
        "@com_github_zenreach_go_jsonnet//parser:go_default_library",
    ],
)
