load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["cmd.go"],
    importpath = "github.com/zenreach/service-manifests/HACK/linter/jsonnet-lint",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_zenreach_go_jsonnet//:go_default_library",
        "@com_github_zenreach_go_jsonnet//linter:go_default_library",
    ],
)

go_binary(
    name = "jsonnet-lint",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
